force-app/main/default/objects/UnifiedContactPointEmail__dlm/fields/rel_1696575096878_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1696575096878_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnifiedContactPointEmail_ssot_PartyI_rel</label>
    <referenceTo>UnifiedIndividual__dlm</referenceTo>
    <relationshipLabel>UnifiedContactPointEmail_ssot_PartyI_rel</relationshipLabel>
    <relationshipName>rel_1696575096878_end</relationshipName>
    <type>Lookup</type>
</CustomField>