force-app/main/default/objects/UnifiedContactPointEmail__dlm/fields/ssot__EmailLatestBounceDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailLatestBounceDateTime__c</fullName>
    <label>Email Latest Bounce Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailLatestBounceDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>