force-app/main/default/objects/UnifiedContactPointEmail__dlm/fields/ssot__EmailLatestBounceReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailLatestBounceReasonText__c</fullName>
    <label>Email Latest Bounce Reason Text</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailLatestBounceReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>